--- a/Graphiz.csproj
+++ b/Graphiz.csproj
@@ -44,6 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormGraphInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormGraphInfo.Designer.cs">
+      <DependentUpon>FormGraphInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -53,8 +59,12 @@
     <Compile Include="Graph.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="GlobalState.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="Viewport.cs" />
+    <EmbeddedResource Include="FormGraphInfo.resx">
+      <DependentUpon>FormGraphInfo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
